fix: update FeedbackSection background color for improved visibility

--- a/src/components/FeedbackSection/FeedbackSection.module.scss
+++ b/src/components/FeedbackSection/FeedbackSection.module.scss
@@ -6,11 +6,7 @@
   padding: 60px 104px;
   border-radius: 50px;
   box-shadow: 0 8px 15px 0 rgba(0, 0, 0, 0.5);
-  background: radial-gradient(
-    371.89% 134.33% at 3.21% 1.26%,
-    rgba(251, 192, 0, 0.07) 0%,
-    rgba(251, 192, 0, 0) 100%
-  );
+  background: #1b1d20;
   color: $white-color;
   border: 1px solid rgb(96, 80, 28);
   position: relative;
